maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:24: error: not enough arguments for method setIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
    setIndication(x,y-1)}
                 ^JediEscaper:31: error: not found: value x
  return aMurNord(x,y+1)
                  ^JediEscaper:31: error: not found: value y
  return aMurNord(x,y+1)
                    ^JediEscaper:36: error: not found: value x
  return aMurOuest(x+1,y)
                   ^JediEscaper:36: error: not found: value y
  return aMurOuest(x+1,y)
                       ^